@@ -70,19 +70,19 @@ transaction:last-of-type		{border-bottom:0px solid #1E90FF;}
 transaction:nth-of-type(1)		{margin-top:0px; padding-top:0;}
 transaction:nth-of-type(1):before	{content:"Transaction"; font-size:26px; color:#fff; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
 
-transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#fff; width:120px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#fff; width:120px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-transaction:nth-of-type(1) provider-org:before		{content:"PROVIDER"; font-size:14px; color:#fff; width:170px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
-transaction:nth-of-type(1) receiver-org:before		{content:"RECEIVER"; font-size:14px; color:#fff; width:170px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
+transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#fff; width:110px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
+transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
+transaction:nth-of-type(1) provider-org:before		{content:"PROVIDER"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
+transaction:nth-of-type(1) receiver-org:before		{content:"RECEIVER"; font-size:14px; color:#fff; width:150px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
 transaction:nth-of-type(1) value:before				{content:"VALUE"; font-size:14px; color:#fff; width:100px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
 transaction description:nth-of-type(n+1):before		{display:none;}
-transaction:nth-of-type(1) description:nth-of-type(1):before {content:"DESCRIPTION"; font-size:14px; color:#fff; width:200px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px;}
+transaction:nth-of-type(1) description:nth-of-type(1):before {content:"DESCRIPTION"; font-size:14px; color:#fff; width:240px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1em;}
 
-transaction-date	{display:table-cell; color:#fff; font-size:16px; width:100px; max-width:100px; padding-left:40px; padding-right:20px;}
-transaction-type	{display:table-cell; color:#fff; font-size:16px; width:100px; max-width:100px; padding-right:20px;}
-transaction description:nth-of-type(1) {display:table-cell; color:#fff; font-size:16px; padding:0px; background-color:transparent; width:170px; max-width:170px; line-height:inherit; padding-right:30px; text-align:left;}
-provider-org	{display:table-cell; color:#fff; font-size:16px; width:150px; max-width:150px; padding-right:20px;}
-receiver-org	{display:table-cell; color:#fff; font-size:16px; width:150px; max-width:150px; padding-right:20px;}
+transaction-date	{display:table-cell; color:#fff; font-size:16px; width:100px; max-width:100px; padding-left:40px; padding-right:10px;}
+transaction-type	{display:table-cell; color:#fff; font-size:16px; width:130px; max-width:130px; padding-right:20px;}
+transaction description:nth-of-type(1) {display:table-cell; color:#fff; font-size:16px; padding:0px; background-color:transparent; width:220px; max-width:220px; line-height:1.35em; padding-right:20px; text-align:left;}
+provider-org	{display:table-cell; color:#fff; font-size:16px; width:130px; max-width:130px; padding-right:20px;}
+receiver-org	{display:table-cell; color:#fff; font-size:16px; width:130px; max-width:130px; padding-right:0px;}
 value			{display:table-cell; color:#fff; text-align:right; font-size:16px; width:100px; max-width:100px; padding-right:40px;}
 value span		{font-size:12px; color:#ccc;}
 
