@@ -65,10 +65,9 @@
 #xml_data_description
 <div class="description_wrap">
 	<div class="description">
-		<span class="title">How is the data calculated?</span>
-		<p>D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
-		<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-		<a href="/about.html#more" class="read">Read more</a>
+		<span class="title">{xml_data_description_title_text}</span>
+		<p>{xml_data_description_text}</p>
+		<a href="#" class="read">{read_more_text}</a>
 	</div>
 </div>
 
@@ -87,10 +86,9 @@
 #donors_data_description
 <div class="description_wrap">
 	<div class="description">
-		<span class="title">How is the data calculated?</span>
-		<p>D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
-		<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-		<a href="/about.html#more" class="read">Read more</a>
+		<span class="title">{donors_data_description_title_text}</span>
+		<p>{donors_data_description_text}</p>
+		<a href="#" class="read">{read_more_text}</a>
 	</div>
 </div>
 
@@ -130,10 +128,9 @@
 #donor_activities_data_description
 <div class="description_wrap">
 	<div class="description">
-		<span class="title">How is the data calculated?</span>
-		<p>D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
-		<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-		<a href="/about.html#more" class="read">Read more</a>
+		<span class="title">{donors_activities_data_description_title_text}</span>
+		<p>{donors_activities_data_description_text}</p>
+		<a href="#" class="read">{read_more_text}</a>
 	</div>
 </div>
 
@@ -193,10 +190,9 @@
 #donor_transactions_data_description
 <div class="description_wrap">
 	<div class="description">
-		<span class="title">How is the data calculated?</span>
-		<p>D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
-		<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-		<a href="/about.html#more" class="read">Read more</a>
+		<span class="title">{donors_transactions_data_description_title_text}</span>
+		<p>{donors_transactions_data_description_text}</p>
+		<a href="#" class="read">{read_more_text}</a>
 	</div>
 </div>
 
@@ -242,10 +238,9 @@
 #donor_budgets_data_description
 <div class="description_wrap">
 	<div class="description">
-		<span class="title">How is the data calculated?</span>
-		<p>D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
-		<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-		<a href="/about.html#more" class="read">Read more</a>
+		<span class="title">{donors_budgets_data_description_title_text}</span>
+		<p>{donors_budgets_data_description_text}</p>
+		<a href="#" class="read">{read_more_text}</a>
 	</div>
 </div>
 
@@ -327,10 +322,9 @@
 #sectors_data_description
 <div class="description_wrap">
 	<div class="description">
-		<span class="title">How is the data calculated?</span>
-		<p>D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
-		<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-		<a href="/about.html#more" class="read">Read more</a>
+		<span class="title">{sectors_data_description_title_text}</span>
+		<p>{sectors_data_description_text}</p>
+		<a href="#" class="read">{read_more_text}</a>
 	</div>
 </div>
 
@@ -404,10 +398,9 @@
 #districts_data_description
 <div class="description_wrap">
 	<div class="description">
-		<span class="title">How is the data calculated?</span>
-		<p>D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
-		<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-		<a href="/about.html#more" class="read">Read more</a>
+		<span class="title">{districts_data_description_title_text}</span>
+		<p>{districts_data_description_text}</p>
+		<a href="#" class="read">{read_more_text}</a>
 	</div>
 </div>
 
@@ -500,10 +493,9 @@ BANGLADESH
 #main_data_description
 <div class="description_wrap">
 	<div class="description">
-		<span class="title">How is the data calculated?</span>
-		<p>D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.</p>
-		<p>In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.</p>
-		<a href="/about.html#more" class="read">Read more</a>
+		<span class="title">{main_data_description_title_text}</span>
+		<p>{main_data_description_text}</p>
+		<a href="#" class="read">{read_more_text}</a>
 	</div>
 </div>
 
@@ -726,7 +718,7 @@ BANGLADESH
 <div class="about_wrap">
 	<div class="about_txt">
 		{about_text}
-		<a href="/about.html#more" class="read">{about_read_more_text}</a>
+		<a href="#" class="read">{about_read_more_text}</a>
 	</div><div class="iati_logo">
 		<a href="http://iatistandard.org/" target="_blank" class="iati_link"><img src="{art}iati_logo.269.png" alt="{iati_logo_alt_text}" width="269" height="70"></a>
 	</div>
