@@ -336,3 +336,56 @@ Top of page
 
 #footer_about_text
 About D-Portal
+
+#read_more_text
+Read more
+
+#xml_data_description_title_text
+How is the data calculated?
+
+#xml_data_description_text
+This is how the data is calculated for money going to {country_name}.
+
+#donors_data_description_title_text
+How is the data calculated?
+
+#donors_data_description_text
+D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.
+In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.
+
+#donors_activities_data_description_title_text
+How is the data calculated?
+
+#donors_activities_data_description_text
+This is how the data is calculated for money going to activities.
+
+#donors_transactions_data_description_title_text
+How is the data calculated?
+
+#donors_transactions_data_description_text
+This is how the data is calculated for money going to transactions.
+
+#donors_budgets_data_description_title_text
+How is the data calculated?
+
+#donors_budgets_data_description_text
+This is how the data is calculated for money going to budgets.
+
+#sectors_data_description_title_text
+How is the data calculated?
+
+#sectors_data_description_text
+This is how the data is calculated for money going to sectors.
+
+#districts_data_description_title_text
+How is the data calculated?
+
+#districts_data_description_text
+This is how the data is calculated for money going to districts.
+
+#main_data_description_title_text
+How is the data calculated?
+
+#main_data_description_text
+D-Portal is a country-based information platform that tracks resource flows. It is aimed at providing line ministries, parliamentarians and civil society with information that can assist with the planning and monitoring of development activities.
+In its first iteration it contains current data published through the International Aid Transparency Initiative (IATI) as well as the most recent (2012) data published by the OECD DAC Creditor Reporting System. Future development will include, inter alia, data from Aid Information Management Systems, national budgets and a range of comparable socio-economic indicators.
