@@ -121,7 +121,7 @@ Nombre total de projets en cours de planification dans l'avenir
 #stats_publisher_tip_text 
 Nombre d'organisations qui rapporte ces données 
 
-# declare_stats_text 
+#declare_stats_text 
 Données affichées ci-dessus ont été fournies par IATI au {today}
 
 #stats_publisher_tip_text
@@ -339,3 +339,56 @@ Haut de la page
 
 #footer_about_text 
 A propos de D-Portal
+
+#read_more_text
+Lire la suite
+
+#xml_data_description_title_text
+Comment les données sont -elle calculée?
+
+#xml_data_description_text
+C'est ainsi que les données sont calculées pour l'argent va {country_name} .
+
+#donors_data_description_title_text
+Comment les données sont -elle calculée?
+
+#donors_data_description_text
+D-Portal est une plate-forme d'information sur le pays qui permet de suivre les flux de ressources . Il vise à fournir des ministères de tutelle , les parlementaires et la société civile des informations qui peuvent aider à la planification et au suivi des activités de développement.
+Dans sa première itération , il contient des données actuelles publiées par l'Initiative internationale pour la transparence de l'aide ( IITA ), ainsi que les plus récentes (2012 ) données publiées par le Système de notification des pays créanciers du CAD de l'OCDE . Développement futur comprendra , entre autres , les données de l'aide des systèmes d'information de gestion , les budgets nationaux et une série d'indicateurs socio- économiques comparables.
+
+#donors_activities_data_description_title_text
+Comment les données sont -elle calculée?
+
+#donors_activities_data_description_text
+C'est ainsi que les données sont calculées pour l'argent va à des activités .
+
+#donors_transactions_data_description_title_text
+Comment les données sont -elle calculée?
+
+#donors_transactions_data_description_text
+C'est ainsi que les données sont calculées pour l'argent va à des transactions .
+
+#donors_budgets_data_description_title_text
+Comment les données sont -elle calculée?
+
+#donors_budgets_data_description_text
+C'est ainsi que les données sont calculées pour l'argent va budgets .
+
+#sectors_data_description_title_text
+Comment les données sont -elle calculée?
+
+#sectors_data_description_text
+C'est ainsi que les données sont calculées pour l'argent va à des secteurs .
+
+#districts_data_description_title_text
+Comment les données sont -elle calculée?
+
+#districts_data_description_text
+C'est ainsi que les données sont calculées pour l'argent va aux districts .
+
+#main_data_description_title_text
+Comment les données sont -elle calculée?
+
+#main_data_description_text
+D-Portal est une plate-forme d'information sur le pays qui permet de suivre les flux de ressources . Il vise à fournir des ministères de tutelle , les parlementaires et la société civile des informations qui peuvent aider à la planification et au suivi des activités de développement.
+Dans sa première itération , il contient des données actuelles publiées par l'Initiative internationale pour la transparence de l'aide ( IITA ), ainsi que les plus récentes (2012 ) données publiées par le Système de notification des pays créanciers du CAD de l'OCDE . Développement futur comprendra , entre autres , les données de l'aide des systèmes d'information de gestion , les budgets nationaux et une série d'indicateurs socio- économiques comparables.
