@@ -339,3 +339,56 @@ Principio de la página
 
 #footer_about_text 
 Acerca de D-Portal
+
+#read_more_text
+Leer más
+
+#xml_data_description_title_text
+¿Cómo se calcula la información?
+
+#xml_data_description_text
+Así es como se calcula los datos de dinero que va a {country_name} .
+
+#donors_data_description_title_text
+¿Cómo se calcula la información?
+
+#donors_data_description_text
+D-Portal es una plataforma de información basada en los países que registra los flujos de recursos . Está dirigido a ofrecer a los ministerios de línea , los parlamentarios y la sociedad civil una información que le puede ayudar con la planificación y el seguimiento de las actividades de desarrollo .
+En su primera versión que contiene los datos actuales publicados a través de la Iniciativa Internacional de Transparencia de la Ayuda ( IATI ), así como los datos más recientes ( 2012 ) publicados por el Sistema de Notificación de los Países Acreedores del CAD . El desarrollo futuro incluirá , entre otras cosas , los datos de emergencia información , Sistemas de Gestión de los presupuestos nacionales y una serie de indicadores socioeconómicos comparables.
+
+#donors_activities_data_description_title_text
+¿Cómo se calcula la información?
+
+#donors_activities_data_description_text
+Así es como se calcula los datos de dinero que va a las actividades .
+
+#donors_transactions_data_description_title_text
+¿Cómo se calcula la información?
+
+#donors_transactions_data_description_text
+Así es como se calcula los datos de dinero que va a las transacciones.
+
+#donors_budgets_data_description_title_text
+¿Cómo se calcula la información?
+
+#donors_budgets_data_description_text
+Así es como se calcula los datos de dinero que va a los bolsillos.
+
+#sectors_data_description_title_text
+¿Cómo se calcula la información?
+
+#sectors_data_description_text
+Así es como se calcula los datos de dinero que va a los sectores.
+
+#districts_data_description_title_text
+¿Cómo se calcula la información?
+
+#districts_data_description_text
+Así es como se calcula los datos de dinero que va a los distritos .
+
+#main_data_description_title_text
+¿Cómo se calcula la información?
+
+#main_data_description_text
+D-Portal es una plataforma de información basada en los países que registra los flujos de recursos . Está dirigido a ofrecer a los ministerios de línea , los parlamentarios y la sociedad civil una información que le puede ayudar con la planificación y el seguimiento de las actividades de desarrollo .
+En su primera versión que contiene los datos actuales publicados a través de la Iniciativa Internacional de Transparencia de la Ayuda ( IATI ), así como los datos más recientes ( 2012 ) publicados por el Sistema de Notificación de los Países Acreedores del CAD . El desarrollo futuro incluirá , entre otras cosas , los datos de emergencia información , Sistemas de Gestión de los presupuestos nacionales y una serie de indicadores socioeconómicos comparables.
