@@ -4,6 +4,8 @@ Remaining 34 background images uploaded
 Added first version of description on about / landing page
 Fixed footer bug for mobile devices
 Begin addition of "Workings out" footer - needs revision
+Fixed table cell space for SAVi to improve legibility
+Translations for data descriptions ("workings out")
 
 
 Development Portal (2014-03-25 shi)
